apps/pg-admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  labels:
    app.service.name: pgadmin
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.service.name: pgadmin
