apps/pg-admin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  labels:
    app.service.name: pgadmin
spec:
  rules:
    - host: pgadmin.kind.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
